Closed Bug 1693849 Opened 4 years ago Closed 4 years ago

[PipeWire] Screen-sharing on Wayland makes Firefox crash when shared window goes fullscreen

Categories

(Core :: WebRTC, defect, P2)

defect

Tracking

()

RESOLVED FIXED
87 Branch
Tracking Status
firefox87 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

[PipeWire] Screen-sharing on Wayland makes Firefox crash when shared window goes fullscreen. It's follow-up from https://bugzilla.mozilla.org/show_bug.cgi?id=1678680#c12

It's already fixed on Chrome:
https://chromium.googlesource.com/external/webrtc/+/master/modules/desktop_capture/linux/base_capturer_pipewire.cc#811

Severity: -- → S3
Priority: -- → P2
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/4004cc1f6bba [PipeWire] Always check allocated video buffer size, r=ng
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: