Bug 1693849 [PipeWire] Always check allocated video buffer size, r=ng

Differential Revision: https://phabricator.services.mozilla.com/D105802